--- a/index.html
+++ b/index.html
@@ -482,6 +482,8 @@
                 <a href="https://github.com/sashankprayaga" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
                 <a href="mailto:sashankprayaga93@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="tel:+4917660600047"><i class="fas fa-phone"></i> Phone</a>
+                <!-- New Download CV Link -->
+                <a href="Sashank_Prayaga_CV_DE (1).pdf" download="Sashank_Prayaga_CV_DE.pdf"><i class="fas fa-download"></i> Download CV</a>
             </div>
         </div>
     </header>
@@ -514,13 +516,13 @@
                             <li><i class="fas fa-cubes"></i> Datalake (Amazon S3)</li>
                         </ul>
                     </div>
-                     <div class="skill-category">
+                    <div class="skill-category">
                         <h3><i class="fas fa-cloud"></i> Cloud & Infrastructure</h3>
                         <ul>
                             <li><i class="fab fa-aws"></i> AWS (Redshift, RDS, Lambda, S3, EC2)</li>
                             <li><i class="fas fa-file-code"></i> IaC (CloudFormation)</li>
                             <li><i class="fab fa-docker"></i> Containerization (Docker)</li>
-                             <li><i class="fas fa-sync-alt"></i> CI/CD Pipelines with Git</li>
+                            <li><i class="fas fa-sync-alt"></i> CI/CD Pipelines with Git</li>
                         </ul>
                     </div>
                     <div class="skill-category">
@@ -534,7 +536,7 @@
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-chart-bar"></i> Visualization</h3>
-                         <ul>
+                        <ul>
                             <li><i class="fas fa-chart-pie"></i> Power BI</li>
                             <li><i class="fas fa-chart-line"></i> Amazon QuickSight</li>
                             <li><i class="fas fa-chart-area"></i> Plotly, Seaborn</li>
@@ -575,7 +577,7 @@
                             <h3>Intern - Data Scientist</h3>
                             <p class="company">Bosch Rexroth</p>
                             <p class="date">Jul 2020 - Jan 2021 | Homburg (Saar), Germany</p>
-                             <ul>
+                            <ul>
                                 <li>Developed ML models to detect anomalies with 95% accuracy.</li>
                                 <li>Performed exploratory data analysis to uncover key operational parameters.</li>
                                 <li>Improved model performance by 20% through hyperparameter tuning.</li>
@@ -587,7 +589,7 @@
                             <h3>Data Analyst - Last Mile Delivery</h3>
                             <p class="company">Amazon Development Centre</p>
                             <p class="date">Sep 2016 - Jun 2017 | Hyderabad, India</p>
-                             <ul>
+                            <ul>
                                 <li>Optimized last-mile logistics, improving delivery efficiency by 15%.</li>
                                 <li>Played a key role in testing a new delivery solution with a 98% success rate.</li>
                             </ul>
@@ -603,8 +605,8 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-content">
-                             <h3>Master Thesis - Defect Detection in Automated Rail-Guided Vehicles</h3>
-                             <p>Collected sensor data to detect 8 distinct mechanical defects. Engineered features and trained multiple ML algorithms, achieving 90% accuracy. Deployed the final model using FastAPI and Streamlit, and implemented MLflow to track experiments.</p>
+                            <h3>Master Thesis - Defect Detection in Automated Rail-Guided Vehicles</h3>
+                            <p>Collected sensor data to detect 8 distinct mechanical defects. Engineered features and trained multiple ML algorithms, achieving 90% accuracy. Deployed the final model using FastAPI and Streamlit, and implemented MLflow to track experiments.</p>
                         </div>
                     </div>
                     <div class="project-card">
@@ -627,9 +629,9 @@
                         <p>Apr 2022</p>
                     </div>
                     <div class="education-card">
-                         <h3>B.Tech in Mechanical Engineering</h3>
-                         <p>ICFAI Foundation for Higher Education, India</p>
-                         <p>Jul 2016</p>
+                        <h3>B.Tech in Mechanical Engineering</h3>
+                        <p>ICFAI Foundation for Higher Education, India</p>
+                        <p>Jul 2016</p>
                     </div>
                 </div>
             </div>
@@ -638,7 +640,7 @@
         <section id="certifications" class="section">
             <div class="container">
                 <h2 class="section-title">Professional Development</h2>
-                 <div class="certifications-list">
+                <div class="certifications-list">
                     <div class="cert-item"><i class="fab fa-aws"></i> AWS Certified AI Practitioner</div>
                     <div class="cert-item"><i class="fas fa-wind"></i> Apache Airflow 3 Fundamentals</div>
                     <div class="cert-item"><i class="fas fa-database"></i> dbt Fundamentals</div>
