--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 <a href="mailto:sashankprayaga93@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="tel:+4917660600047"><i class="fas fa-phone"></i> Phone</a>
                 <!-- New Download CV Link -->
-                <a href="Sashank_Prayaga_CV_DE (1).pdf" download="Sashank_Prayaga_CV_DE.pdf"><i class="fas fa-download"></i> Download CV</a>
+                <a href="Sashank_Prayaga_CV_DE.pdf" download="Sashank_Prayaga_CV_DE.pdf"><i class="fas fa-download"></i> Download CV</a>
             </div>
         </div>
     </header>
