--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
     <main>
         <section id="summary" class="section">
-            <p>Results-driven Data Engineer with over 4 years of experience in building scalable data pipelines, cloud infrastructure, and machine learning solutions. [cite_start]Skilled in automating end-to-end ETL workflows and productionalizing ML models using AWS serverless architectures. [cite: 68, 69]</p>
+            <p>Results-driven Data Engineer with over 4 years of experience in building scalable data pipelines, cloud infrastructure, and machine learning solutions. Skilled in automating end-to-end ETL workflows and productionalizing ML models using AWS serverless architectures.</p>
         </section>
 
         <section id="skills" class="section">
@@ -503,51 +503,51 @@
                     <div class="skill-category">
                         <h3><i class="fas fa-code"></i> Programming & Databases</h3>
                         <ul>
-                            [cite_start]<li><i class="fab fa-python"></i> Python, SQL, R, C++ [cite: 120]</li>
-                            [cite_start]<li><i class="fas fa-warehouse"></i> Redshift, Snowflake [cite: 115]</li>
-                            [cite_start]<li><i class="fas fa-database"></i> Postgres, DynamoDB, RDS [cite: 115]</li>
+                            <li><i class="fab fa-python"></i> Python, SQL, R, C++</li>
+                            <li><i class="fas fa-warehouse"></i> Redshift, Snowflake</li>
+                            <li><i class="fas fa-database"></i> Postgres, DynamoDB, RDS</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-cogs"></i> Data Engineering</h3>
                         <ul>
-                            [cite_start]<li><i class="fas fa-wind"></i> Apache Airflow [cite: 121]</li>
-                            [cite_start]<li><i class="fas fa-bolt"></i> Spark & Kafka [cite: 121]</li>
-                            [cite_start]<li><i class="fas fa-exchange-alt"></i> ETL, ELT, SageMaker Pipelines [cite: 121]</li>
-                            [cite_start]<li><i class="fas fa-cubes"></i> Amazon S3 Datalake [cite: 115]</li>
+                            <li><i class="fas fa-wind"></i> Apache Airflow</li>
+                            <li><i class="fas fa-bolt"></i> Spark & Kafka</li>
+                            <li><i class="fas fa-exchange-alt"></i> ETL, ELT, SageMaker Pipelines</li>
+                            <li><i class="fas fa-cubes"></i> Amazon S3 Datalake</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-cloud"></i> Infrastructure & DevOps</h3>
                         <ul>
-                            [cite_start]<li><i class="fab fa-aws"></i> AWS (Lambda, API Gateway, ECS) [cite: 114]</li>
-                            [cite_start]<li><i class="fas fa-file-code"></i> IaC (CloudFormation, Jinja2) [cite: 122]</li>
-                            [cite_start]<li><i class="fab fa-docker"></i> Docker & AWS CodeBuild [cite: 122]</li>
-                            [cite_start]<li><i class="fas fa-shield-alt"></i> Trivy Security Scanning [cite: 115]</li>
+                            <li><i class="fab fa-aws"></i> AWS (Lambda, API Gateway, ECS)</li>
+                            <li><i class="fas fa-file-code"></i> IaC (CloudFormation, Jinja2)</li>
+                            <li><i class="fab fa-docker"></i> Docker & AWS CodeBuild</li>
+                            <li><i class="fas fa-shield-alt"></i> Trivy Security Scanning</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-rocket"></i> ML & Deployment</h3>
                         <ul>
-                            [cite_start]<li><i class="fas fa-rocket"></i> FastAPI, Streamlit, OpenAPI [cite: 115]</li>
-                            [cite_start]<li><i class="fas fa-flask"></i> MLflow [cite: 115]</li>
-                            [cite_start]<li><i class="fas fa-search"></i> Anomaly Detection [cite: 49]</li>
-                            [cite_start]<li><i class="fas fa-check-double"></i> CI/CD Quality Gates [cite: 80]</li>
+                            <li><i class="fas fa-rocket"></i> FastAPI, Streamlit, OpenAPI</li>
+                            <li><i class="fas fa-flask"></i> MLflow</li>
+                            <li><i class="fas fa-search"></i> Anomaly Detection</li>
+                            <li><i class="fas fa-check-double"></i> CI/CD Quality Gates</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-chart-bar"></i> Visualization</h3>
                         <ul>
-                            [cite_start]<li><i class="fas fa-chart-pie"></i> Power BI & Amazon QuickSight [cite: 116]</li>
-                            [cite_start]<li><i class="fas fa-chart-area"></i> Plotly, Seaborn [cite: 116]</li>
+                            <li><i class="fas fa-chart-pie"></i> Power BI & Amazon QuickSight</li>
+                            <li><i class="fas fa-chart-area"></i> Plotly, Seaborn</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-handshake"></i> Soft Skills</h3>
                         <ul>
-                            [cite_start]<li><i class="fas fa-users"></i> Cross-functional Collaboration [cite: 123]</li>
-                            [cite_start]<li><i class="fas fa-lightbulb"></i> Problem Solving [cite: 123]</li>
-                            [cite_start]<li><i class="fas fa-comments"></i> Communication [cite: 123]</li>
+                            <li><i class="fas fa-users"></i> Cross-functional Collaboration</li>
+                            <li><i class="fas fa-lightbulb"></i> Problem Solving</li>
+                            <li><i class="fas fa-comments"></i> Communication</li>
                         </ul>
                     </div>
                 </div>
@@ -562,14 +562,14 @@
                         <div class="timeline-content">
                             <h3>Data Engineer</h3>
                             <p class="company">Yara International</p>
-                            <p class="date">Jun 2022 - Present | [cite_start]Berlin, Germany [cite: 74]</p>
+                            <p class="date">Jun 2022 - Present | Berlin, Germany</p>
                             <ul>
-                                [cite_start]<li>Designed AWS pipelines using Glue and Redshift Spectrum, reducing processing time by 30%. [cite: 75]</li>
-                                [cite_start]<li>Built serverless ML inference using containerized Lambda and API Gateway with Jinja2-parameterized IaC. [cite: 76, 77]</li>
-                                [cite_start]<li>Orchestrated event-driven retraining workflows using SageMaker Pipelines, reducing manual ops. [cite: 78, 79]</li>
-                                [cite_start]<li>Implemented CI/CD quality gates with Pytest and Trivy security scanning for container compliance. [cite: 80]</li>
-                                [cite_start]<li>Standardized API contracts using OpenAPI and SNS-based artifact publishing. [cite: 82]</li>
-                                [cite_start]<li>Managed ECS and CloudFormation infrastructure, achieving 20% cost reduction. [cite: 81]</li>
+                                <li>Designed AWS pipelines using Glue and Redshift Spectrum, reducing processing time by 30%.</li>
+                                <li>Built serverless ML inference using containerized Lambda and API Gateway with Jinja2-parameterized IaC.</li>
+                                <li>Orchestrated event-driven retraining workflows using SageMaker Pipelines, reducing manual ops.</li>
+                                <li>Implemented CI/CD quality gates with Pytest and Trivy security scanning for container compliance.</li>
+                                <li>Standardized API contracts using OpenAPI and SNS-based artifact publishing.</li>
+                                <li>Managed ECS and CloudFormation infrastructure, achieving 20% cost reduction.</li>
                             </ul>
                         </div>
                     </div>
@@ -577,11 +577,11 @@
                         <div class="timeline-content">
                             <h3>Intern - Data Scientist</h3>
                             <p class="company">Bosch Rexroth</p>
-                            <p class="date">Jul 2020 - Jan 2021 | [cite_start]Homburg, Germany [cite: 88, 89]</p>
+                            <p class="date">Jul 2020 - Jan 2021 | Homburg, Germany</p>
                             <ul>
-                                [cite_start]<li>Developed ML models for heat/mass flow anomaly detection with 95% accuracy. [cite: 90]</li>
-                                [cite_start]<li>Uncovered operational parameters impacting system efficiency through EDA. [cite: 91]</li>
-                                [cite_start]<li>Achieved 20% model performance boost via hyperparameter tuning with Optuna. [cite: 92]</li>
+                                <li>Developed ML models for heat/mass flow anomaly detection with 95% accuracy.</li>
+                                <li>Uncovered operational parameters impacting system efficiency through EDA.</li>
+                                <li>Achieved 20% model performance boost via hyperparameter tuning with Optuna.</li>
                             </ul>
                         </div>
                     </div>
@@ -589,10 +589,10 @@
                         <div class="timeline-content">
                             <h3>Data Analyst - Last Mile</h3>
                             <p class="company">Amazon Development Centre</p>
-                            <p class="date">Sep 2016 - Jun 2017 | [cite_start]Hyderabad, India [cite: 95]</p>
+                            <p class="date">Sep 2016 - Jun 2017 | Hyderabad, India</p>
                             <ul>
-                                [cite_start]<li>Improved delivery efficiency by 15% for North America logistics. [cite: 96]</li>
-                                [cite_start]<li>Tested new delivery solutions achieving a 98% success rate. [cite: 97]</li>
+                                <li>Improved delivery efficiency by 15% for North America logistics.</li>
+                                <li>Tested new delivery solutions achieving a 98% success rate.</li>
                             </ul>
                         </div>
                     </div>
@@ -607,13 +607,13 @@
                     <div class="project-card">
                         <div class="project-content">
                             <h3>Master Thesis - Defect Detection in Rail-Guided Vehicles</h3>
-                            <p>Detected 8 mechanical defects with 90% accuracy using sensor data. [cite_start]Deployed via FastAPI/Streamlit and tracked experiments with MLflow. [cite: 106, 107, 108]</p>
+                            <p>Detected 8 mechanical defects with 90% accuracy using sensor data. Deployed via FastAPI/Streamlit and tracked experiments with MLflow.</p>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-content">
                             <h3>Intelligent Drive Mode Selection in Hybrid Powertrains</h3>
-                            [cite_start]<p>Optimized hybrid vehicle controllers using ML to predict drive modes based on telemetry, maximizing fuel efficiency. [cite: 109, 110]</p>
+                            <p>Optimized hybrid vehicle controllers using ML to predict drive modes based on telemetry, maximizing fuel efficiency.</p>
                         </div>
                     </div>
                 </div>
@@ -626,13 +626,13 @@
                 <div class="education-grid">
                     <div class="education-card">
                         <h3>M.Sc. in Commercial Vehicle Technology</h3>
-                        [cite_start]<p>TU Kaiserslautern, Germany [cite: 99]</p>
-                        [cite_start]<p>Apr 2022 [cite: 100]</p>
+                        <p>TU Kaiserslautern, Germany</p>
+                        <p>Apr 2022</p>
                     </div>
                     <div class="education-card">
                         <h3>B.Tech in Mechanical Engineering</h3>
-                        [cite_start]<p>ICFAI Foundation for Higher Education, India [cite: 102]</p>
-                        [cite_start]<p>Jul 2016 [cite: 103]</p>
+                        <p>ICFAI Foundation for Higher Education, India</p>
+                        <p>Jul 2016</p>
                     </div>
                 </div>
             </div>
@@ -642,11 +642,11 @@
             <div class="container">
                 <h2 class="section-title">Professional Development</h2>
                 <div class="certifications-list">
-                    [cite_start]<div class="cert-item"><i class="fab fa-aws"></i> AWS Certified AI Practitioner [cite: 125]</div>
-                    [cite_start]<div class="cert-item"><i class="fas fa-wind"></i> Apache Airflow 3 Fundamentals [cite: 126]</div>
-                    [cite_start]<div class="cert-item"><i class="fas fa-database"></i> dbt Fundamentals [cite: 127]</div>
-                    [cite_start]<div class="cert-item"><i class="fab fa-google"></i> Google Data Analytics [cite: 128]</div>
-                    [cite_start]<div class="cert-item"><i class="fab fa-microsoft"></i> Azure Data Fundamentals [cite: 128]</div>
+                    <div class="cert-item"><i class="fab fa-aws"></i> AWS Certified AI Practitioner</div>
+                    <div class="cert-item"><i class="fas fa-wind"></i> Apache Airflow 3 Fundamentals</div>
+                    <div class="cert-item"><i class="fas fa-database"></i> dbt Fundamentals</div>
+                    <div class="cert-item"><i class="fab fa-google"></i> Google Data Analytics</div>
+                    <div class="cert-item"><i class="fab fa-microsoft"></i> Azure Data Fundamentals</div>
                 </div>
             </div>
         </section>
